[package]
name = "birc-rapidnj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dtoa = "1.0.9"
fixedbitset = "0.4.2"
petgraph = "0.6.4"
rand = "0.8.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"