[package]
name = "birc-rapidnj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.3"
dtoa = "1.0.9"
fixedbitset = "0.4.2"
parking_lot = "0.12.1"
petgraph = "0.6.4"
rand = "0.8.5"
rayon = "1.8.0"
rb_tree = "0.5.0"
[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "rapidnj"
harness = false
